examples/failing/NullaryAbs.purs
module NullaryAbs where

  func = \ -> "no"
